syntax = "proto3";

package services;

import "google/protobuf/empty.proto";
import "messages/user_action.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.telemetry.collector";

service UserActionController {
  rpc CollectUserAction (messages.UserActionProto)
      returns (google.protobuf.Empty);

}